TestSuite/errors/err0508_where_unkown_name.pas
//!Неизвестное имя 'T2'
procedure p1<T1>; where T1, T2: record;
begin 
  
end;

begin
  
end.